--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "backend",
-  "type": "module",
+  "name": "gamebuddy",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
+    "start": "node backend/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/md-ashikul-islam/gamebuddy.git"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.28.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.8.0",
-    "multer": "^1.4.4",
-    "streamifier": "^0.1.1"
+  "bugs": {
+    "url": "https://github.com/md-ashikul-islam/gamebuddy/issues"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
+  "homepage": "https://github.com/md-ashikul-islam/gamebuddy#readme",
+  "dependencies": {
+    "react-router-dom": "^6.3.0"
   }
 }
